sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:20: error: not found: value inverse
		inverse=false
                ^AlgCocktailSort2:26: error: not found: value inverse
				inverse=true
                                ^AlgCocktailSort2:37: error: not found: value inverse
					inverse=true
                                        ^AlgCocktailSort2:41: error: not found: value inverse
	}while(inverse)
               ^